--- a/charts/basic/population.html
+++ b/charts/basic/population.html
@@ -11,7 +11,8 @@
         var option = {
             animation: false,
             title: {
-                text: '总人口（万人）'
+                text: '总人口（万人）',
+                subtext: '国家统计局'
             },
             tooltip: {
                 trigger: 'axis',
